hurtig push med mindre ændringer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <html>
     <body>
         <h1>
-            Vejret vælger viborg hvis du ikke indtaster en by
+            Vejret
         </h1>
+        <h2>vælger viborg hvis du ikke indtaster en by</h2>
         <textarea id="textBox"></textarea>
         <button onclick="FetchWeatherData()">hvordan er vejret?</button>
         <div id="temp"></div>
