--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <script src="./jScript-1.js"></script>
 </head>
 <html>
-    <body>
+    <body id="body">
+        <button onclick="NewWeatherDisplay()">Lav nyt VejrDisplay</button>
         <h1>
             Vejret
         </h1>
-        <h2>vælger viborg hvis du ikke indtaster en by</h2>
-        <textarea id="textBox"></textarea>
-        <button onclick="FetchWeatherData()">hvordan er vejret?</button>
-        <div id="temp"></div>
     </body>
 </html>
